# flask_vs_fastapi

./: .gitignore
fastapi_async/: Dockerfile  README.md  README_TEST.md  TESTING_GUIDE.md  alembic.ini  app.py  context.py  db.py  models.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_app.py
fastapi_async/migrations/: env.py
fastapi_async/migrations/versions/: 0993b283bbe9_create_users_and_orders_tables.py  76f46008b84b_add_updated_at_columns_to_users_and_.py
fastapi_async/models/: __init__.py  order.py  user.py
fastapi_async/routers/: orders.py  users.py
fastapi_async/services/: __init__.py  orders.py
fastapi_async/tests/: conftest.py  test_app.py  test_endpoints.py  test_services.py
flask_sync/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
