[project]
name = "fastapi-async"
version = "0.1.0"
description = "FastAPI async example"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.110.0",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.27.1",
] 
